# tauri-server-demo

./: package.json  pnpm-lock.yaml  vite.config.ts
map/: process.dio
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  udp.rs
src/components/SvgIcon/: index.tsx
src/layout/: index.tsx
src/layout/Header/: NavBar.tsx
src/router/: index.tsx
src/views/Error/: index.tsx
src/views/Home/: index.tsx
